# openfst

./: .bazelrc  .cmake-format.yaml  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
.github/workflows/: bazel.yml  bazel_arm64_macos.yml  bazel_x64_linux.yml  bazel_x64_windows.yml  cmake.yml  cmake_arm64_macos.yml  cmake_x64_linux.yml
docs/: advanced_usage.md  code_of_conduct.md  extensions.md  mpdt_extension.md  quick_tour.md
docs/examples/arcsort/: arcsort.sh
docs/examples/public_domain/wotw/: BUILD.bazel
openfst/: BUILD.bazel  __init__.py
openfst/benchmark/: BUILD.bazel  CMakeLists.txt  benchmain_main.cc  compact_test.cc  compose_test.cc  connect_test.cc  determinize_test.cc  fst_test.cc  matcher_test.cc  memory_test.cc  minimize_test.cc  prune_test.cc  replace_test.cc  serialize_test.cc  shortest_path_test.cc  symbol-table_test.cc  weight_test.cc
openfst/compat/: BUILD.bazel  CMakeLists.txt  checksummer.h  compat.h  file_path.cc  file_path.h  file_path_test.cc  init_test.cc  seed_sequences.cc  seed_sequences.h  status_builder.h  status_macros.h  status_macros_test.cc  status_matchers.h  status_matchers_test.cc
openfst/extensions/categorial/: BUILD.bazel  CMakeLists.txt  categorial-weight.h  weight_test.cc
openfst/extensions/compact/: BUILD.bazel
openfst/extensions/compress/: BUILD.bazel  CMakeLists.txt  compress-main_test.sh  compress.h  compress_test.cc  fstrandmod.cc  quantize_weights_test.cc  randmod.h  randmod_test.cc
openfst/extensions/far/: BUILD.bazel  CMakeLists.txt  compile-strings.h  compilestrings-main_test.sh  convert-main_test.sh  convert.h  create-main_test.sh  create.h  encode-main_test.sh  encode.h  equal-main_test.sh  equal.h  extract-main_test.sh  extract.h  far-class.cc  far-class.h  far-reader.h  far-test-base.h  far-type.h  far-writer.h  far.cc  far.h  farcompilestrings-main.cc  farconvert-main.cc  farcreate-main.cc  farencode-main.cc  farequal-main.cc  farequal.cc  farextract-main.cc  farinfo-main.cc  farisomorphic-main.cc  farprintstrings-main.cc  farscript.cc  farscript.h  fst-far-reader.h  fst-far-writer.h  fst-far_test.cc  fst-reader.h  fst-writer.h  getters.cc  (+19 more)
openfst/extensions/linear/: BUILD.bazel  CMakeLists.txt  fstlinear-main.cc  linear-fst-data-builder.h  linear-fst-data.h  linear-fst-data_test.cc  linear-fst.h  linear-fst_test.cc  linearscript.cc  trie.h
openfst/extensions/lookahead/: BUILD.bazel
openfst/extensions/mpdt/: BUILD.bazel  CMakeLists.txt  compose-main_test.sh  compose_test.cc  expand-main_test.sh  expand_test.cc  reverse-main_test.sh  reverse_test.cc
openfst/extensions/ngram/: BUILD.bazel  CMakeLists.txt  benchmark_test.cc  bitmap-index.h  compact-louds-tree-fst.h  compact-louds-tree-fst_test.cc  ngram-fst.h  ngram-fst_test.cc  nthbit_test.cc
openfst/extensions/pdt/: BUILD.bazel  CMakeLists.txt  collection.h  collection_test.cc  compose-main_test.sh  compose_test.cc  expand-main_test.sh  expand.h  expand_test.cc  paren.h  paren_test.cc  pdt.h  replace-main_test.sh  replace.h  replace_test.cc  reverse-main_test.sh  reverse_test.cc  shortest-path-main_test.sh  shortest-path.h  shortest-path_test.cc
openfst/extensions/python/: BUILD.bazel  CMakeLists.txt  cpywrapfst.pxd  gil_test.py  pywrapfst.pxd  pywrapfst.pyx  pywrapfst_test.py
openfst/extensions/special/: BUILD.bazel  CMakeLists.txt  phi-fst.h  phi-fst_test.cc  phi-main_test.sh  rho-fst.h  rho-fst_test.cc  rho-main_test.sh  sigma-fst.cc  sigma-fst.h  sigma-fst_test.cc  sigma-main_test.sh
openfst/lib/: BUILD.bazel  CMakeLists.txt  accumulator.h  add-on.h  arc-arena.h  arc-map.h  arc.h  bi-table.h  build_rules.bzl  cache.h  cc-visitors.h  compact-fst.h  compat-util.h  complement.h  compose-filter.h  compose.h  connect.h  const-fst.h  determinize.h  disambiguate.h  edit-fst.h  encode.cc  encode.h  epsnormalize.h  error-weight.h  expanded-fst.h  expander-cache.h  expectation-weight.h  factor-weight.h  file-stream-status.h  file-util.cc  file-util.h  float-weight.h  fst.cc  fst.h  generic-register.cc  generic-register.h  heap.h  icu.h  interval-set.h  (+40 more)
openfst/script/: BUILD.bazel  compile-impl.h  encodemapper-class.cc  fst-class.cc  fstscript.h  getters.cc  getters.h  info-impl.cc  info-impl.h  randequivalent.cc  randequivalent.h  randgen.cc  randgen.h  relabel.cc  relabel.h  script-impl.h  weight-class.h
openfst/test/: BUILD.bazel  CMakeLists.txt  a-star_test.cc  accumulator_test.cc  add-on_test.cc  algo_test.cc  algo_test.h  arc-map_test.cc  arcsort-main_test.sh  arcsort_test.cc  basic-fst.h  closure-main_test.sh  closure_test.cc  compact_test.cc  compactors.h  compile-main_test.sh  compose-main_test.sh  compose_test.h  concat-main_test.sh  concat_test.cc  connect-main_test.sh  connect_test.cc  convert-main_test.sh  determinize-main_test.sh  determinize_test.cc  difference-main_test.sh  difference_test.cc  disambiguate-main_test.sh  disambiguate_test.cc  draw-main_test.sh  dso_test.sh  encode-main_test.sh  encode_test.cc  epsnormalize-main_test.sh  epsnormalize_test.cc  equal-main_test.sh  equal_test.cc  equivalent-main_test.sh  equivalent_test.cc  error_test.cc  (+74 more)
openfst/test/testdata/randgen/: r3.fst  r4.fst
scripts/: run_with_test_tmpdir.sh  test_bazel.sh  test_cmake.sh
